Fixing formatting issues in wksp
commit 567dafff7c6f0007dadce6a8277b788992fd9d45
Author: Prem Gandhi <phgandhi02@gmail.com>
Date:   Mon Dec 29 12:40:24 2025 -0500

    updated wksp recommended extensions

Squashed commit of the following:

commit fa04b771fcc51b1252918c0aa030b9e6c2a2e12f
Author: Prem Gandhi <phgandhi02@gmail.com>
Date:   Mon Dec 29 12:10:47 2025 -0500

    format to pass flake8

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
     "recommendations": [
         "ranch-hand-robotics.rde-ros-2",
-        "ms-python.python"
+        "ms-python.python",
+        "ms-python.autopep8",
+        "ms-python.pylint"
     ]
 }
