--- a/src/manipulator_bringup/package.xml
+++ b/src/manipulator_bringup/package.xml
@@ -14,7 +14,9 @@
   <author email="ljimenez@ennovatec.co">Luis Jimenez</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
+  <!-- ros2_control_cmake dep simplifies CMakeLists.txt by providing CMake macros -->
+   <!-- More details here: https://github.com/ros-controls/ros2_control_cmake -->
+  <build_depend>ros2_control_cmake</build_depend>
   <exec_depend>rviz2</exec_depend>
 
   <export>
