--- a/src/manipulator_bringup/CMakeLists.txt
+++ b/src/manipulator_bringup/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+find_package(ament_cmake)
 
 install(
   DIRECTORY launch
