update pylint wrkflw to only run when src code changes

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,18 @@
 name: pylint
 
-on: [push,pull_request]
+on: 
+  push:
+    branches:
+      - main
+      - dev
+    paths:
+      - 'src/**'
+  pull_request:
+    branches:
+      - main
+      - dev
+    paths:
+      - 'src/**'
 
 jobs:
   build:
