--- a/src/bartending_cobot_bringup/config/manipulator_controllers.yaml
+++ b/src/bartending_cobot_bringup/config/manipulator_controllers.yaml
@@ -5,6 +5,10 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
+    r6bot_controller:
+      type: joint_trajectory_controller/JointTrajectoryController
+
+    use_sim_time: True
 
 r6bot_controller:
   ros__parameters:
